# zk-attest

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/examples/: poseidon_test.rs
backend/src/: attestation_energy.rs  auth.rs  hedera.rs  issuer.rs  main.rs  prover.rs  routes.rs  state.rs  types.rs
circuit/: attest.circom  package-lock.json  package.json  verification_key.json
frontend/: index.html
