[package]
name = "zk-attest-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Zero-knowledge attestation platform on Hedera — privacy-preserving credentials backed by ZK proofs, HCS audit logs, and HTS NFTs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rand = "0.8"
hiero-sdk = "0.45"
negentropy = { git = "https://github.com/jjcav84/negentropy.git" }
pso-poseidon = "0.4"
ark-bn254 = "0.6"
ark-ff = "0.6"
num-bigint = "0.4"
